fix calendar view on small devices

--- a/resources/assets/js/components/BigCalendar/style.scss
+++ b/resources/assets/js/components/BigCalendar/style.scss
@@ -41,7 +41,8 @@
 
     @include media('<mediumWidth'){
 
-      display:none;
+      flex-direction: column;
+      flex-flow: column-reverse;
 
     }
 
